--- a/package.json
+++ b/package.json
@@ -2,5 +2,13 @@
   "name": "survaq-api",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@cloudflare/workers-types": "^3.16.0",
+    "typescript": "^4.8.2",
+    "wrangler": "^2.0.28"
+  },
+  "dependencies": {
+    "hono": "^2.1.3"
+  }
 }
