--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "dev": "wrangler dev"
+  },
   "devDependencies": {
     "@cloudflare/workers-types": "^3.16.0",
     "typescript": "^4.8.2",
