--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "wrangler": "^2.0.28"
   },
   "dependencies": {
-    "hono": "^2.1.3"
+    "hono": "^2.1.3",
+    "microcms-js-sdk": "^2.2.1"
   }
 }
