--- a/package.json
+++ b/package.json
@@ -4,16 +4,23 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "wrangler dev"
+    "dev:worker": "wrangler dev",
+    "dev:server": "tsx watch src/index.ts"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^3.16.0",
+    "@types/node": "^18.7.14",
+    "@types/sqlstring": "^2.3.0",
     "prettier": "^2.7.1",
+    "tsx": "^3.9.0",
     "typescript": "^4.8.2",
     "wrangler": "^2.0.28"
   },
   "dependencies": {
+    "@google-cloud/bigquery": "^6.0.2",
+    "fastify": "^4.5.3",
     "hono": "^2.1.3",
-    "microcms-js-sdk": "^2.2.1"
+    "microcms-js-sdk": "^2.2.1",
+    "sqlstring": "^2.3.3"
   }
 }
