--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@google-cloud/bigquery": "^6.0.2",
+    "dayjs": "^1.11.5",
     "fastify": "^4.5.3",
     "hono": "^2.1.3",
     "microcms-js-sdk": "^2.2.1",
