--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "license": "MIT",
   "scripts": {
     "dev:worker": "wrangler dev",
-    "dev:server": "tsx watch src/index.ts"
+    "dev:server": "tsx watch src/index.ts",
+    "build:server": "tsup"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^3.16.0",
     "@types/node": "^18.7.14",
     "@types/sqlstring": "^2.3.0",
     "prettier": "^2.7.1",
+    "tsup": "^6.2.3",
     "tsx": "^3.9.0",
     "typescript": "^4.8.2",
     "wrangler": "^2.0.28"
