--- a/wrangler.toml
+++ b/wrangler.toml
@@ -2,11 +2,18 @@ name = "survaq-api"
 main = "src/worker.ts"
 compatibility_date = "2022-09-02"
 
+kv_namespaces = [
+  { binding = "PRODUCT", preview_id = "f3448fba638c4c22b80c870003de7361", id = "a27f2ed0ae474366999e88334f2af3f0" }
+]
+
 [vars]
 ORIGIN = "0.0.0.0:3001"
 
 [env.production]
 name = "survaq-api-production"
+kv_namespaces = [
+  { binding = "PRODUCT", id = "b8482c24a1dc4dde9e2aecf544edfb8a" }
+]
 
 [env.production.vars]
 ORIGIN = "survaq-api-b3eeccanjq-an.a.run.app"
