--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev:worker": "wrangler dev",
     "dev:server": "tsx watch src/index.ts",
     "build:server": "tsup",
-    "deploy:worker": "wrangler publish -e production"
+    "deploy:worker": "wrangler publish -e production",
+    "test": "vitest"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^3.18.0",
@@ -17,6 +18,7 @@
     "tsup": "^6.4.0",
     "tsx": "^3.11.0",
     "typescript": "^4.8.4",
+    "vitest": "^0.24.5",
     "wrangler": "^2.1.15"
   },
   "dependencies": {
