--- a/package.json
+++ b/package.json
@@ -5,30 +5,24 @@
   "license": "MIT",
   "scripts": {
     "dev:worker": "wrangler dev --local",
-    "dev:server": "tsx watch src/index.ts",
-    "build:server": "tsup",
+    "dev": "wrangler dev --local",
     "deploy:worker": "wrangler publish -e production",
+    "deploy": "wrangler publish -e production",
     "test": "vitest"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20230115.0",
-    "@types/node": "^18.11.18",
-    "@types/sqlstring": "^2.3.0",
-    "prettier": "^2.8.3",
-    "tsup": "^6.5.0",
-    "tsx": "^3.12.2",
-    "typescript": "^4.9.4",
-    "vite": "^4.0.4",
-    "vitest": "^0.28.3",
-    "wrangler": "^2.8.1"
+    "@types/node": "^18.13.0",
+    "prettier": "^2.8.4",
+    "typescript": "^4.9.5",
+    "vite": "^4.1.1",
+    "vitest": "^0.28.4",
+    "wrangler": "^2.9.1"
   },
   "dependencies": {
-    "@google-cloud/bigquery": "^6.1.0",
-    "@supabase/supabase-js": "^2.7.0",
+    "@supabase/supabase-js": "^2.7.1",
     "dayjs": "^1.11.7",
-    "fastify": "^4.12.0",
-    "hono": "^2.7.5",
-    "microcms-js-sdk": "^2.3.2",
-    "sqlstring": "^2.3.3"
+    "hono": "^2.7.7",
+    "microcms-js-sdk": "^2.3.2"
   }
 }
