--- a/package.json
+++ b/package.json
@@ -7,19 +7,23 @@
     "dev:worker": "wrangler dev",
     "dev": "wrangler dev",
     "deploy": "wrangler deploy -e production",
+    "db:pull": "prisma db pull",
+    "db:generate": "prisma generate --no-engine",
     "test": "vitest"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20230518.0",
     "@types/node": "^20.3.1",
     "prettier": "^2.8.8",
+    "prisma": "^5.6.0",
     "typescript": "^5.1.3",
-    "vite": "^4.3.9",
-    "vitest": "^0.32.2",
-    "wrangler": "^3.1.1"
+    "vite": "^5.0.5",
+    "vitest": "^1.0.1",
+    "wrangler": "^3.19.0"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.26.0",
+    "@prisma/client": "^5.6.0",
+    "@prisma/extension-accelerate": "^0.6.2",
     "dayjs": "^1.11.8",
     "hono": "^3.2.5"
   }
