--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "prisma": "^5.6.0",
     "typescript": "^5.1.3",
     "vite": "^5.0.5",
-    "vitest": "^1.0.1",
+    "vitest": "0.34.3",
     "wrangler": "^3.19.0"
   },
   "dependencies": {
