prismaからdrizzleに変更

--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,1 @@
-DATABASE_URL="postgresql://postgres:........:5432/postgres"
-VITE_PRISMA_DATA_PROXY_URL=
+VITE_DATABASE_URL="postgresql://postgres:......../postgres"
