--- a/wrangler.toml
+++ b/wrangler.toml
@@ -3,9 +3,12 @@ main = "src/worker.ts"
 compatibility_date = "2023-12-07"
 node_compat = true
 
-[[hyperdrive]]
-binding = "HYPERDRIVE"
-id = "0c3880a7f8444a7a98b03f9c5bc72fee"
+# devではhyperdriveが利用できなくなってしまった
+# In development, you should use a local postgres connection string to emulate hyperdrive functionality.
+# Please setup postgres locally and set the value of "HYPERDRIVE"'s "localConnectionString" to the postgres connection string in your wrangler.toml
+#[[hyperdrive]]
+#binding = "HYPERDRIVE"
+#id = "0c3880a7f8444a7a98b03f9c5bc72fee"
 
 [env.production]
 name = "survaq-api-production"
