--- a/package.json
+++ b/package.json
@@ -16,8 +16,12 @@
     "@cloudflare/workers-types": "^4.20231218.0",
     "@types/node": "^20.10.5",
     "@types/pg": "^8.10.9",
+    "autoprefixer": "^10.4.16",
     "drizzle-kit": "^0.20.7",
+    "postcss": "^8.4.32",
     "prettier": "^3.1.1",
+    "tailwind": "^4.0.0",
+    "tailwindcss": "^3.4.0",
     "typescript": "^5.3.3",
     "vite": "^5.0.10",
     "vitest": "0.34.3",
