--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "drizzle-orm": "^0.29.1",
     "hono": "^3.11.9",
     "lit": "^3.1.0",
-    "pg": "^8.11.3"
+    "pg": "^8.11.3",
+    "slack-cloudflare-workers": "^0.8.2"
   }
 }
