--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "dev": "wrangler dev --remote --port 8787",
     "deploy:preview": "wrangler deploy -e preview",
     "deploy:prod": "wrangler deploy -e production",
+    "tail:preview": "wrangler tail -e preview",
+    "tail:prod": "wrangler tail -e production",
     "db:pull": "drizzle-kit introspect:pg",
     "test": "vitest",
     "build:wc": "vite build"
