--- a/package.json
+++ b/package.json
@@ -38,5 +38,8 @@
     "lit": "^3.1.0",
     "pg": "^8.11.3",
     "slack-cloudflare-workers": "^0.8.2"
+  },
+  "prettier": {
+    "printWidth": 100
   }
 }
