--- a/package.json
+++ b/package.json
@@ -4,41 +4,38 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev:worker": "wrangler dev",
-    "dev": "wrangler dev --remote --port 8787",
-    "deploy:preview": "wrangler deploy -e preview",
-    "deploy:prod": "wrangler deploy -e production",
-    "tail:preview": "wrangler tail -e preview",
-    "tail:prod": "wrangler tail -e production",
+    "dev": "wrangler dev --port 8787",
+    "deploy": "wrangler deploy",
+    "tail": "wrangler tail",
     "db:pull": "drizzle-kit introspect:pg",
     "test": "vitest",
     "build:wc": "vite build",
     "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20240117.0",
-    "@types/node": "^20.11.5",
-    "@types/pg": "^8.10.9",
-    "autoprefixer": "^10.4.17",
-    "drizzle-kit": "^0.20.14",
-    "postcss": "^8.4.33",
-    "prettier": "^3.2.4",
+    "@cloudflare/workers-types": "^4.20240423.0",
+    "@types/node": "^20.12.7",
+    "@types/pg": "^8.11.5",
+    "autoprefixer": "^10.4.19",
+    "drizzle-kit": "^0.20.17",
+    "postcss": "^8.4.38",
+    "prettier": "^3.2.5",
     "tailwind": "^4.0.0",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.3.3",
-    "vite": "^5.0.12",
-    "vitest": "0.34.3",
-    "wrangler": "^3.23.0"
+    "tailwindcss": "^3.4.3",
+    "typescript": "^5.4.5",
+    "vite": "^5.2.10",
+    "vitest": "1.5.2",
+    "wrangler": "^3.52.0"
   },
   "dependencies": {
     "@lit/task": "^1.0.0",
-    "csv-parse": "^5.5.3",
-    "dayjs": "^1.11.10",
-    "drizzle-orm": "^0.29.3",
-    "hono": "^3.12.6",
-    "lit": "^3.1.1",
-    "pg": "^8.11.3",
-    "slack-cloudflare-workers": "^0.9.1"
+    "csv-parse": "^5.5.5",
+    "dayjs": "^1.11.11",
+    "drizzle-orm": "^0.30.9",
+    "hono": "^4.2.9",
+    "lit": "^3.1.3",
+    "pg": "^8.11.5",
+    "slack-cloudflare-workers": "^0.12.0"
   },
   "prettier": {
     "printWidth": 100
