--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,17 +1,15 @@
-name = "survaq-api"
+name = "survaq-api-production"
 main = "src/entry.ts"
-compatibility_date = "2023-12-07"
+compatibility_date = "2024-04-03"
 node_compat = true
 
-# devではhyperdriveが利用できなくなってしまった
-# In development, you should use a local postgres connection string to emulate hyperdrive functionality.
-# Please setup postgres locally and set the value of "HYPERDRIVE"'s "localConnectionString" to the postgres connection string in your wrangler.toml
-#[[hyperdrive]]
-#binding = "HYPERDRIVE"
-#id = "b878be59a4024074b80a84e8c88a08cf"
+[[kv_namespaces]]
+binding = "CACHE"
+id = "e45d1964fa5549a484bf4b3855a46a90"
 
-kv_namespaces = [{ binding = "CACHE", id = "8939dd4510e74016be7e184b05da4543", preview_id = "dfab8ef92eae43f5be01b1655a30248b" }]
-r2_buckets = [{ binding = 'CMS_BUCKETS', bucket_name = 'directus' }]
+[[r2_buckets]]
+binding = 'CMS_BUCKETS'
+bucket_name = 'directus'
 
 [build]
 command = "npm run build:wc"
@@ -19,15 +17,3 @@ watch_dir = "./src"
 
 [site]
 bucket = "./assets"
-
-[env.production]
-name = "survaq-api-production"
-hyperdrive=[{ binding = "HYPERDRIVE", id = "b878be59a4024074b80a84e8c88a08cf" }]
-kv_namespaces = [{ binding = "CACHE", id = "e45d1964fa5549a484bf4b3855a46a90" }]
-r2_buckets = [{ binding = 'CMS_BUCKETS', bucket_name = 'directus' }]
-
-[env.preview]
-name = "survaq-api-preview"
-hyperdrive=[{ binding = "HYPERDRIVE", id = "b878be59a4024074b80a84e8c88a08cf" }]
-kv_namespaces = [{ binding = "CACHE", id = "b16c7009e14e430fb4f3c06b257bd1e0" }]
-r2_buckets = [{ binding = 'CMS_BUCKETS', bucket_name = 'directus' }]
