--- a/package.json
+++ b/package.json
@@ -7,19 +7,19 @@
     "dev": "wrangler dev --port 8787",
     "deploy": "wrangler deploy",
     "tail": "wrangler tail",
-    "db:pull": "drizzle-kit introspect:pg",
+    "db:pull": "prisma db pull",
     "test": "vitest",
     "build:wc": "vite build",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "postinstall": "prisma generate"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240423.0",
     "@types/node": "^20.12.7",
-    "@types/pg": "^8.11.5",
     "autoprefixer": "^10.4.19",
-    "drizzle-kit": "^0.20.17",
     "postcss": "^8.4.38",
     "prettier": "^3.2.5",
+    "prisma": "^5.13.0",
     "tailwind": "^4.0.0",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5",
@@ -29,12 +29,13 @@
   },
   "dependencies": {
     "@lit/task": "^1.0.0",
+    "@prisma/adapter-pg-worker": "^5.13.0",
+    "@prisma/client": "5.13.0",
+    "@prisma/pg-worker": "^5.13.0",
     "csv-parse": "^5.5.5",
     "dayjs": "^1.11.11",
-    "drizzle-orm": "^0.30.9",
     "hono": "^4.2.9",
     "lit": "^3.1.3",
-    "pg": "^8.11.5",
     "slack-cloudflare-workers": "^0.12.0"
   },
   "prettier": {
