--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "wrangler": "^3.52.0"
   },
   "dependencies": {
+    "@hono/zod-validator": "^0.2.1",
     "@lit/task": "^1.0.0",
     "@prisma/adapter-pg-worker": "^5.13.0",
     "@prisma/client": "5.13.0",
