WIP: キャンセル用のタスクワーカーを用意

--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "wrangler dev --port 8787",
-    "deploy": "wrangler deploy",
+    "dev": "run-p dev:* --print-label",
+    "dev:main": "$npm_execpath run delay 3 && $npm_execpath run wrangler dev --port 8787",
+    "dev:task": "wrangler dev -c wrangler.kiribi.toml --port 8788",
+    "deploy": "run-s deploy:task deploy:main --print-label",
+    "deploy:main": "wrangler deploy",
+    "deploy:task": "wrangler deploy -c wrangler.kiribi.toml",
     "tail": "wrangler tail",
     "db:pull": "prisma db pull",
     "test": "vitest",
@@ -17,6 +21,8 @@
     "@cloudflare/workers-types": "^4.20240423.0",
     "@types/node": "^20.12.7",
     "autoprefixer": "^10.4.19",
+    "delay-cli": "^2.0.0",
+    "npm-run-all": "^4.1.5",
     "postcss": "^8.4.38",
     "prettier": "^3.2.5",
     "prisma": "^5.13.0",
@@ -36,6 +42,7 @@
     "csv-parse": "^5.5.5",
     "dayjs": "^1.11.11",
     "hono": "^4.2.9",
+    "kiribi": "^0.0.13",
     "lit": "^3.1.3",
     "slack-cloudflare-workers": "^0.12.0"
   },
