--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "deploy": "run-s deploy:task deploy:main --print-label",
     "deploy:main": "wrangler deploy",
     "deploy:task": "wrangler deploy -c wrangler.kiribi.toml",
-    "tail": "wrangler tail",
+    "tail": "run-p tail:*",
+    "tail:main": "wrangler tail",
+    "tail:task": "wrangler tail -c wrangler.kiribi.toml",
     "db:pull": "prisma db pull",
     "test": "vitest",
     "build:wc": "vite build",
     "typecheck": "tsc --noEmit",
-    "postinstall": "yarn prisma generate && yarn prisma generate --schema=./node_modules/kiribi/schema.prisma"
+    "postinstall": "yarn prisma generate"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240423.0",
@@ -41,8 +43,8 @@
     "@prisma/pg-worker": "^5.13.0",
     "csv-parse": "^5.5.5",
     "dayjs": "^1.11.11",
-    "hono": "^4.3.2",
-    "kiribi": "^0.0.13",
+    "hono": "^4.3.4",
+    "kiribi": "^0.0.15",
     "lit": "^3.1.3",
     "slack-cloudflare-workers": "^0.12.0"
   },
