クライアント用コードの開発方法を改善

--- a/package.json
+++ b/package.json
@@ -5,17 +5,18 @@
   "license": "MIT",
   "scripts": {
     "dev": "run-p dev:* --print-label",
+    "dev:client": "vite dev --port 8000",
     "dev:main": "$npm_execpath run delay 3 && $npm_execpath run wrangler dev --port 8787",
     "dev:task": "wrangler dev -c wrangler.kiribi.toml --port 8788",
     "deploy": "run-s deploy:task deploy:main --print-label",
-    "deploy:main": "wrangler deploy",
+    "deploy:main": "$npm_execpath run build && $npm_execpath run wrangler deploy",
     "deploy:task": "wrangler deploy -c wrangler.kiribi.toml",
     "tail": "run-p tail:*",
     "tail:main": "wrangler tail",
     "tail:task": "wrangler tail -c wrangler.kiribi.toml",
     "db:pull": "prisma db pull",
     "test": "vitest",
-    "build:wc": "vite build",
+    "build": "vite build",
     "typecheck": "tsc --noEmit",
     "postinstall": "yarn prisma generate"
   },
