ビルドステップにcssのビルドも含める

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev:client": "vite dev --port 8000",
     "dev:main": "$npm_execpath run delay 3 && $npm_execpath run wrangler dev --port 8787",
     "dev:task": "wrangler dev -c wrangler.kiribi.toml --port 8788",
-    "deploy": "run-s deploy:task deploy:main --print-label",
+    "deploy": "run-s deploy:main deploy:task --print-label",
     "deploy:main": "$npm_execpath run build && $npm_execpath run wrangler deploy",
     "deploy:task": "wrangler deploy -c wrangler.kiribi.toml",
     "tail": "run-p tail:*",
@@ -16,7 +16,9 @@
     "tail:task": "wrangler tail -c wrangler.kiribi.toml",
     "db:pull": "prisma db pull",
     "test": "vitest",
-    "build": "vite build",
+    "build": "run-p build:* --print-label",
+    "build:js": "vite build",
+    "build:css": "tailwindcss-cli -o ./assets/static/style.css -i ./src/globals.css",
     "typecheck": "tsc --noEmit",
     "postinstall": "yarn prisma generate"
   },
@@ -31,6 +33,7 @@
     "prisma": "^5.13.0",
     "tailwind": "^4.0.0",
     "tailwindcss": "^3.4.3",
+    "tailwindcss-cli": "^0.1.2",
     "typescript": "^5.4.5",
     "vite": "^5.2.10",
     "vitest": "1.5.2",
