サテライトサイト連携用のメジャーメントプロトコルを実装

--- a/wrangler.kiribi.toml
+++ b/wrangler.kiribi.toml
@@ -52,5 +52,10 @@ binding = "CompleteOrder"
 service = "kiribi-survaq-api"
 entrypoint = "CompleteOrder"
 
+[[services]]
+binding = "PurchaseMeasurementProtocol"
+service = "kiribi-survaq-api"
+entrypoint = "PurchaseMeasurementProtocol"
+
 [site]
 bucket = "./node_modules/kiribi/client"
