--- a/wrangler.kiribi.toml
+++ b/wrangler.kiribi.toml
@@ -27,7 +27,7 @@ max_retries = 5
 
 [triggers]
 # 1日に1回と1時間に1回
-crons = [ "0 0 * * *", "0 * * * *" ]
+crons = [ "0 0 * * *", "0 * * * *", "*/10 * * * *" ]
 
 [[services]]
 binding = "KIRIBI"
