cronの実行時間を変更

--- a/wrangler.kiribi.toml
+++ b/wrangler.kiribi.toml
@@ -26,8 +26,8 @@ queue = "kiribi-queue-survaq-api"
 max_retries = 5
 
 [triggers]
-# 1日に1回、毎時05分、10分に1回
-crons = [ "0 0 * * *", "5 * * * *", "*/10 * * * *" ]
+# 1日に1回、毎時05|55分、10分に1回
+crons = [ "0 0 * * *", "5 * * * *", "55 * * * *", "*/10 * * * *" ]
 
 [[services]]
 binding = "KIRIBI"
