トークンの有効期限を定期的に通知する

--- a/wrangler.kiribi.toml
+++ b/wrangler.kiribi.toml
@@ -83,5 +83,10 @@ binding = "NotifyToSlack"
 service = "kiribi-survaq-api"
 entrypoint = "NotifyToSlack"
 
+[[services]]
+binding = "TokensHealthCheck"
+service = "kiribi-survaq-api"
+entrypoint = "TokensHealthCheck"
+
 [site]
 bucket = "./node_modules/kiribi/client"
