--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "wrangler": "^3.57.2"
   },
   "dependencies": {
+    "@hono/oauth-providers": "^0.5.0",
     "@hono/zod-validator": "^0.2.1",
     "@lit/task": "^1.0.0",
     "@prisma/adapter-pg-worker": "^5.14.0",
