--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240529.0",
     "@types/node": "^20.12.13",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.19",
     "delay-cli": "^2.0.0",
     "npm-run-all": "^4.1.5",
@@ -52,7 +54,10 @@
     "hono": "^4.4.2",
     "kiribi": "^0.0.16",
     "lit": "^3.1.3",
-    "slack-cloudflare-workers": "^0.12.0"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "slack-cloudflare-workers": "^0.12.0",
+    "swr": "^2.2.5"
   },
   "prettier": {
     "printWidth": 100
