shopify-partialを取り込む

--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "tail:task": "wrangler tail -c wrangler.kiribi.toml",
     "db:pull": "prisma db pull",
     "test": "vitest",
-    "build": "run-p build:* --print-label",
-    "build:js": "vite build",
+    "build": "rm -rf assets && $npm_execpath run run-p build:* --print-label",
+    "build:web-components": "vite build -c builds/vite.web-components.mts",
+    "build:shopify": "vite build -c ./builds/vite.shopify.mts",
     "build:css": "tailwindcss-cli -o ./assets/static/style.css -i ./src/globals.css",
     "typecheck": "tsc --noEmit",
     "postinstall": "yarn prisma generate"
@@ -27,6 +28,7 @@
     "@types/node": "^20.12.13",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react": "^4.3.0",
     "autoprefixer": "^10.4.19",
     "delay-cli": "^2.0.0",
     "npm-run-all": "^4.1.5",
