--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,5 +1,5 @@
 name = "survaq-api-production"
-main = "src/entry.ts"
+main = "src/entries/worker.ts"
 compatibility_date = "2024-04-03"
 node_compat = true
 
