cronでRakutenの注文情報を取り込み

--- a/wrangler.kiribi.toml
+++ b/wrangler.kiribi.toml
@@ -88,5 +88,10 @@ binding = "TokensHealthCheck"
 service = "kiribi-survaq-api"
 entrypoint = "TokensHealthCheck"
 
+[[services]]
+binding = "SyncRakutenOrderToBigQuery"
+service = "kiribi-survaq-api"
+entrypoint = "SyncRakutenOrderToBigQuery"
+
 [site]
 bucket = "./node_modules/kiribi/client"
