--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240529.0",
     "@types/node": "^20.12.13",
+    "@types/papaparse": "^5.3.14",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.0",
@@ -50,11 +51,11 @@
     "@prisma/client": "5.14.0",
     "@prisma/pg-worker": "^5.14.0",
     "cfw-bq": "^0.0.3",
-    "csv-parse": "^5.5.6",
     "dayjs": "^1.11.11",
     "hono": "^4.4.2",
     "kiribi": "^0.0.16",
     "lit": "^3.1.3",
+    "papaparse": "^5.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "slack-cloudflare-workers": "^0.12.0",
