--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "db:pull": "prisma db pull",
     "test": "vitest",
     "build": "rm -rf assets && $npm_execpath run run-p build:* --print-label",
-    "build:web-components": "vite build -c builds/vite.web-components.mts",
-    "build:shopify": "vite build -c ./builds/vite.shopify.mts",
+    "build:web-components": "vite build --mode webComponents",
+    "build:shopify": "vite build --mode shopify",
+    "build:portal": "vite build --mode portal",
     "build:css": "tailwindcss -o ./assets/static/style.css -i ./src/globals.css --minify",
     "typecheck": "tsc --noEmit",
     "postinstall": "yarn prisma generate"
@@ -29,7 +30,6 @@
     "@types/papaparse": "^5.3.14",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.0",
     "autoprefixer": "^10.4.19",
     "delay-cli": "^2.0.0",
     "npm-run-all": "^4.1.5",
@@ -51,6 +51,7 @@
     "@prisma/client": "5.14.0",
     "@prisma/pg-worker": "^5.14.0",
     "cfw-bq": "^0.0.3",
+    "csv-parse": "^5.5.6",
     "dayjs": "^1.11.11",
     "hono": "^4.4.2",
     "kiribi": "^0.0.16",
