--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "papaparse": "^5.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
     "slack-cloudflare-workers": "^0.12.0",
     "swr": "^2.2.5"
   },
