--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240529.0",
     "@types/node": "^20.12.13",
+    "@types/pako": "^2.0.3",
     "@types/papaparse": "^5.3.14",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
@@ -56,6 +57,7 @@
     "hono": "^4.4.2",
     "kiribi": "^0.0.16",
     "lit": "^3.1.3",
+    "pako": "^2.1.0",
     "papaparse": "^5.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
