SyncAmazonOrderToBigQueryを作成し取り込みを開始

--- a/wrangler.kiribi.toml
+++ b/wrangler.kiribi.toml
@@ -108,5 +108,10 @@ binding = "SyncAmazonItemsToBigQuery"
 service = "kiribi-survaq-api"
 entrypoint = "SyncAmazonItemsToBigQuery"
 
+[[services]]
+binding = "SyncAmazonOrderToBigQuery"
+service = "kiribi-survaq-api"
+entrypoint = "SyncAmazonOrderToBigQuery"
+
 [site]
 bucket = "./node_modules/kiribi/client"
