各SKUの配送時期表示が本日と何日乖離しているかをBigQueryに保存するタスクを追加

--- a/wrangler.kiribi.toml
+++ b/wrangler.kiribi.toml
@@ -128,5 +128,10 @@ binding = "SyncLatestShopifyProductGroupBigQuery"
 service = "kiribi-survaq-api"
 entrypoint = "SyncLatestShopifyProductGroupBigQuery"
 
+[[services]]
+binding = "SaveDeliveryScheduleGapToBigQuery"
+service = "kiribi-survaq-api"
+entrypoint = "SaveDeliveryScheduleGapToBigQuery"
+
 [site]
 bucket = "./node_modules/kiribi/client"
